--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
               <div class="searchedEntities">
                 <template v-for="item in entities">
-                  <button type="button" v-on:click="selectEntity(item,$event)"
+                  <div type="button" v-on:click="selectEntity(item,$event)"
                   v-if=" (item.indexOf(searchEntity) !== -1 || searchEntity == '')">
                     {{item}}
-                  </button>
+                  </div>
                 </template>
                 <button type="button" v-on:click="addEntity(searchEntity, $event)" v-if="searchEntity != ''">create {{searchEntity}}</button>
               </div>
